[package]
name = "platformer_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] } # Change when releasing
bevy_rapier2d = "0.22.0"
bevy_rapier3d = "0.22.0"
winit = "0.28.6"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.dev]
opt-level = 1